--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -8,6 +8,7 @@
   width: 100vw;
   justify-content: center;
   align-items: center;
-  background-color: lavenderblush;
-  box-shadow: 0px 0px 15px black;
+  box-shadow: 0px 0px 10px black;
+  border-radius: 26px 26px 0px 0px;
+  background-color: rgba(25, 0, 95, 0.425);
 }
