markdown iframe query

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,7 +20,7 @@
 
 body {
   //  background-color: rgba(48, 26, 247, 0.801);
-  background-image: url("../images/cool-background.png");
+  background-image: url("../images/Circles.svg");
   background-size: cover;
 }
 
