--- a/src/styles/container.module.scss
+++ b/src/styles/container.module.scss
@@ -1,4 +1,5 @@
 .container {
+  background-color: rgba($color: #e9e9e9, $alpha: 0.5);
   display: flex;
   flex-direction: column;
   justify-content: center;
