--- a/src/styles/container.module.scss
+++ b/src/styles/container.module.scss
@@ -1,9 +1,9 @@
 .container {
   background-color: rgba($color: #e9e9e9, $alpha: 0.5);
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-evenly;
   text-align: center;
   border-radius: 6px;
   h1 {
