--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -36,3 +36,10 @@ a {
 p {
   font-size: 1.5em;
 }
+
+.banner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
