--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -1,9 +1,11 @@
 .layout {
+    position: relative;
   display: grid;
   flex-wrap: wrap;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   flex-shrink: 1;
   gap: 20px;
   margin: 0px auto;
+  z-index: 100;
 }
