--- a/src/styles/container.module.scss
+++ b/src/styles/container.module.scss
@@ -1,10 +1,11 @@
 .container {
-  background-color: rgba($color: #e9e9e9, $alpha: 0.5);
+  background-color: rgba(255, 255, 255, 0.281);
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   text-align: center;
   border-radius: 6px;
+  border-top: 10px solid rgba(25, 0, 95, 0.425);
   h1 {
     padding-top: 20px;
   }
