--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -26,22 +26,36 @@ body {
 
 h1 {
   font-size: 3em;
-  color: rgba(73, 70, 70, 0.74);
+  color: rgb(235, 232, 232);
 }
 a {
   font-size: 1.5em;
-  font-family: Arial, Helvetica;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: rgba(255, 255, 255, 0.6);
 }
 p {
-  font-size: 1.5em;
+  font-size: 1.25em;
 }
 
 .title {
+  width: 20em;
+  height: 20em;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 50%;
+}
+
+.intro {
+  display: flex;
+  width: 33%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  border-bottom: 3px solid white;
+  border-radius: 6px;
 }
 
 .stripes-50 {
