--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -1,11 +1,10 @@
 .layout {
-    position: relative;
-  display: grid;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
   flex-wrap: wrap;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  flex-shrink: 1;
-  gap: 20px;
-  margin: 0px auto;
   z-index: 100;
+  margin: 50px;
 }
