--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -10,4 +10,5 @@
   background-color: rgba(25, 0, 95, 0.425);
   box-shadow: 0px 0px 10px black;
   border-radius: 0px 0px 26px 26px;
+  z-index: 100;
 }
