--- a/src/styles/container.module.scss
+++ b/src/styles/container.module.scss
@@ -4,8 +4,9 @@
   flex-direction: column;
   justify-content: space-evenly;
   text-align: center;
-  border-radius: 6px;
-  border-top: 10px solid rgba(25, 0, 95, 0.425);
+  border-radius: 13px;
+  border-top: 20px solid rgba(25, 0, 95, 0.425);
+  box-shadow: 0px 0px 18px;
   h1 {
     padding-top: 20px;
   }
