--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -5,7 +5,7 @@
   // position: fixed;
   height: 100px;
   bottom: 0;
-  width: 100vw;
+  width: 100%;
   justify-content: center;
   align-items: center;
   box-shadow: 0px 0px 10px black;
