--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -3,7 +3,7 @@
   position: sticky;
   height: 80px;
   top: 0;
-  width: 100vw;
+  width: 100%;
   padding: 0px 20px;
   justify-content: space-between;
   align-items: center;
