--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -27,6 +27,7 @@ body {
 h1 {
   font-size: 3em;
   color: rgb(235, 232, 232);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 a {
@@ -40,14 +41,24 @@ p {
 }
 
 .title {
-  width: 20em;
-  height: 20em;
   display: flex;
+  width: 80%;
+  height: 50%;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.6);
-  border-radius: 50%;
+  flex-shrink: 1;
+  h1 {
+    font-size: 5em;
+  }
+  h2 {
+    font-size: 3em;
+  }
+}
+
+.your-class {
+  display: flex;
+  flex: 1;
+  width: 100%;
 }
 
 .intro {
