--- a/src/styles/layout-grid.scss
+++ b/src/styles/layout-grid.scss
@@ -1,20 +1,3 @@
-.item-main {
-  grid-area: item-main;
-}
-
-.item-1 {
-  grid-area: item1;
-}
-.item-2 {
-  grid-area: item2;
-}
-.item-3 {
-  grid-area: item3;
-}
-.item-4 {
-  grid-area: item4;
-}
-
 .text {
   grid-area: header;
   margin: 40px 0px;
@@ -43,9 +26,26 @@
     "item3 item4 item-main";
 
   gap: 20px;
-  flex-grow: 1;
+  flex-shrink: 1;
   margin: 20px auto;
   z-index: 100;
+
+  .item-main {
+    grid-area: item-main;
+  }
+
+  .item-1 {
+    grid-area: item1;
+  }
+  .item-2 {
+    grid-area: item2;
+  }
+  .item-3 {
+    grid-area: item3;
+  }
+  .item-4 {
+    grid-area: item4;
+  }
 }
 
 @media (max-width: 1100px) {
