--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -3,8 +3,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   flex-wrap: wrap;
+  padding: 10% 9%;
   z-index: 50;
-  margin: 50px;
+  background-color: rgba(238, 238, 238, 0.2);
+  margin: 0px 4%;
+  border-radius: 5px;
 }
