--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -1,14 +1,20 @@
 /** @format */
-
 .footer {
   display: flex;
-  // position: fixed;
-  height: 100px;
+  height: 160px;
   bottom: 0;
   width: 100%;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+  flex-direction: column;
   box-shadow: 0px 0px 10px black;
   border-radius: 26px 26px 0px 0px;
   background-color: rgba(25, 0, 95, 0.425);
+}
+.icons {
+  display: flex;
+}
+.disclaimer {
+  display: flex;
+  flex-direction: row;
 }
