--- a/src/styles/layout-grid.scss
+++ b/src/styles/layout-grid.scss
@@ -1,20 +1,26 @@
 .text {
   grid-area: header;
   display: flex;
-  margin: 40px 10%;
   text-align: center;
+  margin-top: 30px;
   flex-direction: column;
   justify-content: center;
+  box-shadow: 0px -3px 3px;
+  padding: 2%;
+  border-radius: 7px;
 }
 
-.image-text {
+#image-text {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 40px 8%;
+  margin-top: 10%;
+  padding: 2%;
   text-align: center;
   flex-direction: column;
   grid-area: image-text;
+  box-shadow: 0px -3px 3px;
+  border-radius: 7px;
 }
 
 .layout-grid {
@@ -26,10 +32,12 @@
   grid-template-areas:
     "header header header"
     "item1 . item2"
+    ". . ."
     "image-text image-text image-text"
     "item-main item-main item-main";
 
-  gap: 20px;
+  row-gap: 0px;
+  column-gap: 30px;
   flex-shrink: 1;
   margin: 20px auto;
   z-index: 100;
