impressum added style edited

--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -4,7 +4,7 @@
   height: 160px;
   bottom: 0;
   width: 100%;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
   box-shadow: 0px 0px 10px black;
