--- a/src/styles/cards.scss
+++ b/src/styles/cards.scss
@@ -1,13 +1,12 @@
 .item {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
   padding: 2%;
-  margin-bottom: 5%;
-  border: 2px solid rgb(223, 223, 223);
-  border-radius: 7px;
+  border-left: 3px solid rgb(223, 223, 223);
+  border-right: 3px solid rgb(223, 223, 223);
   p {
     padding-top: 10px;
     color: rgb(63, 63, 63);
