--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -35,18 +35,24 @@ h1 {
 h2 {
   color: rgba(255, 255, 255, 0.7);
 }
-h4 {
+
+h3 {
   color: rgb(63, 63, 63);
 }
 
+h4 {
+  color: rgb(39, 39, 39);
+}
+
 a {
-  font-size: 1.5em;
+  font-size: 1.2em;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: rgba(255, 255, 255, 0.6);
 }
 
 p {
   font-size: 1.1em;
+  color: rgb(39, 39, 39);
 }
 
 .title {
