--- a/src/styles/layout-grid.scss
+++ b/src/styles/layout-grid.scss
@@ -13,8 +13,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 10%;
-  padding: 2%;
+  margin: 3% 0px;
   text-align: center;
   flex-direction: column;
   grid-area: image-text;
