--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -1,11 +1,11 @@
-.container {
+.containerCard {
   background-color: rgba(255, 255, 255, 0.281);
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   text-align: center;
-  border-radius: 13px;
-  border-top: 20px solid rgba(25, 0, 95, 0.425);
+  border-radius: 5px;
+  border-top: 10px solid #5bc497;
   box-shadow: 0px 0px 18px;
   overflow: hidden;
   -webkit-transition: all 0.4s ease-in-out;
@@ -15,7 +15,21 @@
   }
 }
 
-.container:hover {
+.containerTech {
+  background-color: rgba(255, 255, 255, 0.281);
+  display: flex;
+  justify-content: space-evenly;
+  border-top: 3px solid #5bc497;
+  text-align: center;
+  padding: 0px 10px;
+  margin: 10px;
+  border-radius: 4px;
+}
+
+.containerCard:hover {
   transition: transform 0.4s;
   -webkit-transform: scale(1.1);
 }
+
+//#5BC497
+//#3ea0a5f3
