--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -7,9 +7,7 @@
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
-  box-shadow: 0px 0px 10px black;
-  border-radius: 26px 26px 0px 0px;
-  background-color: rgba(25, 0, 95, 0.425);
+  background-color: #108a9c;
 }
 .icons {
   display: flex;
@@ -17,4 +15,9 @@
 .disclaimer {
   display: flex;
   flex-direction: row;
+  text-align: center;
+  text-shadow: 0px 0px 2px black;
 }
+
+// #4ABCC3
+//#57C29F
