--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -5,7 +5,9 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  padding: 10% 9%;
+  padding-right: 8%;
+  padding-left: 8%;
+  padding-top: 6%;
   z-index: 50;
   background-color: var(--color-bg);
   transition: all 0.5s ease-in-out;
@@ -16,9 +18,17 @@
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
-  font-family: "Times New Roman", Times, serif;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   padding: 1cm;
   background-color: var(--color-bg);
+  li {
+    color: var(--color-text);
+    font-size: 1.2em;
+  }
+}
+
+.layoutFiller {
+  height: 300px;
 }
 
 .leftSide {
@@ -73,7 +83,7 @@
 
   p {
     color: white;
-    margin-bottom: 1.5em;
+    margin-bottom: 0.5em;
   }
   h2 {
     margin-top: 10px;
